<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.AuthActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_auth"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@color/light_blue_600"
        android:textStyle="bold"
        android:fontFamily="sans-serif"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:titleTextColor="@color/white" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="16dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar_auth">

        <EditText
            android:id="@+id/emailEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="emailAddress"
            android:ems="10"
            android:hint="@string/textoemail"
            android:inputType="textEmailAddress"
            android:minHeight="48dp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="8dp" />

        <EditText
            android:id="@+id/passwordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="password"
            android:ems="10"
            android:hint="@string/textocontraseña"
            android:inputType="textPassword"
            android:minHeight="48dp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="8dp" />

        <!-- Botones de Registro y Acceso -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <Button
                android:id="@+id/signUpButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/light_blue_600"
                android:text="@string/textobotonregistrar"
                android:textColor="@color/white"
                android:minHeight="48dp"
                android:layout_marginEnd="8dp"
                app:cornerRadius="6dp" />

            <Button
                android:id="@+id/loginButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/light_blue_900"
                android:text="@string/textobotonacceder"
                android:textColor="@color/white"
                android:minHeight="48dp"
                android:layout_marginStart="8dp"
                app:cornerRadius="6dp" />
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="8dp" />

        <!-- Botón de Google -->
        <Button
            android:id="@+id/googleButton"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:backgroundTint="@color/gray_chat"
            android:contentDescription="@string/google_sign_in"
            android:drawableStart="@mipmap/ic_google"
            android:drawablePadding="8dp"
            android:minHeight="56dp"
            android:text="@string/google"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textAlignment="textStart"
            android:textSize="16sp"
            app:cornerRadius="6dp"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>