<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".ui.UserConfigActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_config"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:background="@color/light_blue_600"
            android:textStyle="bold"
            android:fontFamily="sans-serif"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:titleTextColor="@color/white" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar_config">

            <!-- Encabezado: DATOS USUARIO -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/datos_usuario"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:gravity="center"
                android:layout_marginBottom="16dp" />

            <EditText
                android:id="@+id/nombrePilaUsuarioEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="name"
                android:ems="10"
                android:hint="@string/nombre_usuario"
                android:inputType="textPersonName"
                android:minHeight="48dp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="8dp" />

            <EditText
                android:id="@+id/ciudadUsuarioEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="password"
                android:ems="10"
                android:hint="@string/ciudad"
                android:inputType="text"
                android:minHeight="48dp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="8dp" />

            <!-- Sexo y Spinner en la misma fila -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="16dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sexo"
                    android:textSize="16sp"
                    android:textColor="@color/black"
                    android:layout_gravity="center_vertical"
                    android:layout_marginEnd="8dp" />

                <Spinner
                    android:id="@+id/sexoUsuarioSpinner"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:backgroundTint="@color/light_blue_600"
                    android:minHeight="48dp"
                    android:padding="8dp"
                    android:spinnerMode="dropdown" />
            </LinearLayout>

            <!-- Spinner para Edad -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="16dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/edad"
                    android:textSize="16sp"
                    android:textColor="@color/black"
                    android:layout_gravity="center_vertical"
                    android:layout_marginEnd="8dp" />

                <Spinner
                    android:id="@+id/edadUsuarioSpinner"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:backgroundTint="@color/light_blue_900"
                    android:minHeight="48dp"
                    android:padding="8dp"
                    android:spinnerMode="dropdown" />
            </LinearLayout>

            <!-- Campo de texto adicional -->
            <EditText
                android:id="@+id/acercaUsuarioEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/texto_ejemplo_descripcion_usuario"
                android:inputType="textMultiLine"
                android:minHeight="100dp"
                android:maxLines="5"
                android:gravity="top|start"
                android:padding="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:importantForAutofill="no" />

            <!-- Encabezado: DATOS IA -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/datos_ia_amiga"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:gravity="center"
                android:layout_marginTop="32dp"
                android:layout_marginBottom="16dp" />

            <!-- Campo para Nombre IA -->
            <EditText
                android:id="@+id/nombreIAEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="name"
                android:ems="10"
                android:hint="@string/nombre_ia"
                android:inputType="textPersonName"
                android:minHeight="48dp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="8dp" />

            <!-- Spinner para edad IA -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="16dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/edad_ia"
                    android:textSize="16sp"
                    android:textColor="@color/black"
                    android:layout_gravity="center_vertical"
                    android:layout_marginEnd="8dp" />

                <Spinner
                    android:id="@+id/edadIASpinner"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:backgroundTint="@color/light_blue_600"
                    android:minHeight="48dp"
                    android:padding="8dp"
                    android:spinnerMode="dropdown" />
            </LinearLayout>

            <!-- Spinner para estilo IA-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="16dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/estilo_IA"
                    android:textSize="16sp"
                    android:textColor="@color/black"
                    android:layout_gravity="center_vertical"
                    android:layout_marginEnd="8dp" />

                <Spinner
                    android:id="@+id/estiloIASpinner"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:backgroundTint="@color/light_blue_900"
                    android:minHeight="48dp"
                    android:padding="8dp"
                    android:spinnerMode="dropdown" />
            </LinearLayout>

            <!-- Campo para Descripción de personalidad IA -->
            <EditText
                android:id="@+id/acercaIAEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/personalidad_ia_hint"
                android:inputType="textMultiLine"
                android:minHeight="100dp"
                android:maxLines="5"
                android:gravity="top|start"
                android:padding="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:autofillHints="" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="8dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">

                <Button
                    android:id="@+id/salirButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:backgroundTint="@color/light_blue_600"
                    android:text="@string/salir"
                    android:minHeight="48dp"
                    android:textColor="@color/white"
                    android:layout_marginEnd="8dp"
                    app:cornerRadius="6dp" />

                <Button
                    android:id="@+id/guardarButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:backgroundTint="@color/light_blue_900"
                    android:text="@string/guardar"
                    android:textColor="@color/white"
                    android:minHeight="48dp"
                    android:layout_marginStart="8dp"
                    app:cornerRadius="6dp" />
            </LinearLayout>

            <Button
                android:id="@+id/borrarHistorialButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@android:color/darker_gray"
                android:minHeight="48dp"
                android:text="BORRAR HISTORIAL AMIGO"
                android:textColor="@android:color/white"
                app:cornerRadius="6dp"/>

        </LinearLayout>



        <!-- Botón de Ayuda en la parte superior derecha -->
        <ImageButton
            android:id="@+id/ayudaButton"
            android:layout_width="71dp"
            android:layout_height="63dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/ayuda"
            android:scaleType="centerInside"
            android:src="@mipmap/ic_help_foreground"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>