<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.ChatActivity">

    <!-- Toolbar -->


    <!-- RecyclerView para mensajes del chat -->
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_auth"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@color/light_blue_600"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:titleTextColor="@color/white">

        <!-- Contenedor para organizar los elementos en orden -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <!-- Botón de imagen para volver atrás -->
            <ImageButton
                android:id="@+id/btnVolverHome"
                android:layout_width="42dp"
                android:layout_height="42dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/back_button"
                android:src="@mipmap/ic_flecha_izquierda"
                tools:ignore="TouchTargetSizeCheck" />

            <!-- Imagen del asistente -->
            <ImageView
                android:id="@+id/imgAssistantDynamic"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:contentDescription="@string/asistente"
                android:scaleType="centerCrop" />

            <!-- Título del Toolbar -->
            <TextView
                android:id="@+id/tvToolbarTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold" />

        </LinearLayout>
    </androidx.appcompat.widget.Toolbar>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerChat"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:overScrollMode="never"
        android:padding="8dp"
        app:layout_constraintTop_toBottomOf="@id/toolbar_auth"
        app:layout_constraintBottom_toTopOf="@id/chatInputLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Contenedor para entrada de texto y botón de enviar -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/chatInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <!-- Campo de texto para escribir mensajes -->
        <EditText
            android:id="@+id/etMessage"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:hint="@string/escribe_un_mensaje"
            android:padding="12dp"
            android:background="@drawable/cajatextochat_background"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/btnSend"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginEnd="8dp"/>

        <!-- Botón para enviar mensaje -->
        <ImageButton
            android:id="@+id/btnSend"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@android:color/white"
            android:contentDescription="@string/enviar"
            app:tint="@color/light_blue_600"
            android:src="@drawable/ic_send_message_foreground"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>